// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangelogComponent should compile 1`] = `
<pm-changelog
  changelog$={[Function Observable]}
  http={[Function HttpClient]}
>
  <md-card
    class="mat-card"
  >
    
    
    <div />
    
  
  </md-card>
</pm-changelog>
`;

exports[`ChangelogComponent should handle failure to load file gracefully 1`] = `
<div
  id="root2"
<<<<<<< HEAD
  ng-version="5.0.0-beta.2"
=======
  ng-version="5.0.0-beta.7"
>>>>>>> master
>
  <md-card
    class="mat-card"
  >
    
  
    <div>
      <p>
        Error loading changelog.md
      </p>
      

    </div>
    

  </md-card>
</div>
`;

exports[`ChangelogComponent should render changelog 1`] = `
<div
  id="root1"
<<<<<<< HEAD
  ng-version="5.0.0-beta.2"
=======
  ng-version="5.0.0-beta.7"
>>>>>>> master
>
  <md-card
    class="mat-card"
  >
    
  
    <div>
      <p>
        Error loading changelog.md
      </p>
      

    </div>
    

  </md-card>
</div>
`;
